--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,6 +5,7 @@ html,body,#app{
   height: 100%;
   padding: 0;
   margin: 0;
+  min-width: 1366px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
